--- a/index.html
+++ b/index.html
@@ -9,9 +9,57 @@
     <!-- css -->
     <link rel="stylesheet" href="./css/style.css">
 
+    <!-- font awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+        integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
+    <!-- header con 3 colonne -->
+    <header>
+
+        <section class="container">
+
+            <!-- Link sezioni sito -->
+            <div>
+
+                <div class="column-2-5 justify-cont-l">
+                    <nav>
+                        <ul>
+                            <li>
+                                <a href="#">Donna</a>
+                            </li>
+                            <li>
+                                <a href="#">Uomo</a>
+                            </li>
+                            <li>
+                                <a href="#">Bambini</a>
+                            </li>
+                        </ul>
+                    </nav>
+                </div>
+
+                <div class="column-3-5">
+                    <img src="./img/boolean-logo.png" alt="Boolean">
+                </div>
+
+                <div class="column-2-5 justify-cont-r">
+                    <i class="fa-solid fa-user"></i>
+                    <i class="fa-solid fa-heart"></i>
+                    <i class="fa-solid fa-bag-shopping"></i>
+                </div>
+
+            </div>
+
+        </section>
+
+    </header>
+
+    <!-- main -->
+    <main>
+
+    </main>
 
 </body>
 
