--- a/index.html
+++ b/index.html
@@ -59,6 +59,122 @@
     <!-- main -->
     <main>
 
+        <section class="main-container">
+
+            <div>
+
+                <div class="column-1-3">
+                    <img src="./img/1.webp" alt="1">
+
+                    <!-- descrizione articolo -->
+                    <div class="brand">
+                        Levi's
+                    </div>
+
+                    <div class="model">
+                        RELAXED FIT TEE UNISEX
+                    </div>
+
+                    <div class="price">
+                        <span>14,99 €</span> <span>29,99 €</span>
+                    </div>
+
+                </div>
+
+                <div class="column-1-3">
+                    <img src="./img/2.webp" alt="1">
+
+                    <!-- descrizione articolo -->
+                    <div class="brand">
+                        Guess
+                    </div>
+
+                    <div class="model">
+                        ROSES TEE
+                    </div>
+
+                    <div class="price">
+                        <span>20,99 €</span> <span>29,99 €</span>
+                    </div>
+
+                </div>
+
+                <div class="column-1-3">
+                    <img src="./img/3.webp" alt="1">
+
+                    <!-- descrizione articolo -->
+                    <div class="brand">
+                        Come Zucchero Filato
+                    </div>
+
+                    <div class="model">
+                        VOGLIA DI COLORI PASTELLO
+                    </div>
+
+                    <div class="price">
+                        <span>129,99 €</span> <span>184,99 €</span>
+                    </div>
+
+                </div>
+
+                <div class="column-1-3">
+                    <img src="./img/4.webp" alt="1">
+
+                    <!-- descrizione articolo -->
+                    <div class="brand">
+                        Levi's
+                    </div>
+
+                    <div class="model">
+                        TEE UNISEX
+                    </div>
+
+                    <div class="price">
+                        <span>14,99 €</span> <span>29,99 €</span>
+                    </div>
+
+                </div>
+
+                <div class="column-1-3">
+                    <img src="./img/5.webp" alt="1">
+
+                    <!-- descrizione articolo -->
+                    <div class="brand">
+                        Maya Deluxe
+                    </div>
+
+                    <div class="model">
+                        STRIP BODICE
+                    </div>
+
+                    <div class="price">
+                        <span>99,99 €</span>
+                    </div>
+
+                </div>
+
+                <div class="column-1-3">
+                    <img src="./img/6.webp" alt="1">
+
+                    <!-- descrizione articolo -->
+                    <div class="brand">
+                        Esprit
+                    </div>
+
+                    <div class="model">
+                        MAGLIONE - BLACK
+                    </div>
+
+                    <div class="price">
+                        <span>29,99 €</span>
+                    </div>
+
+                </div>
+
+            </div>
+
+        </section>
+
     </main>
 
 </body>
