--- a/index.html
+++ b/index.html
@@ -177,6 +177,61 @@
 
     </main>
 
+    <!-- footer -->
+    <footer>
+
+        <section class="container">
+
+            <div class="column-1-2 justify-cont-l">
+
+                <div>
+                    Boolando s.r.l
+                </div>
+
+                <!-- Link sezione legale e privacy -->
+                <div>
+                    <nav>
+                        <ul>
+                            <li>
+                                <a href="#">Informazioni legali</a>
+                            </li>
+                            <li>
+                                <a href="#">Informativa sulla privacy</a>
+                            </li>
+                            <li>
+                                <a href="#">Diritto di recesso</a>
+                            </li>
+                        </ul>
+                    </nav>
+                </div>
+
+            </div>
+
+            <!-- icone social -->
+
+            <div class="column-1-2 justify-cont-r">
+
+                <div>
+                    Trovaci anche su
+                </div>
+
+                <div>
+                    <i class="fa-brands fa-square-x-twitter"></i>
+                    <i class="fa-brands fa-square-facebook"></i>
+                    <i class="fa-brands fa-square-instagram"></i>
+                    <i class="fa-brands fa-square-pinterest"></i>
+                    <i class="fa-brands fa-square-youtube"></i>
+                </div>
+
+            </div>
+
+        </section>
+
+        <hr>
+
+    </footer>
+
+
 </body>
 
 </html>
