--- a/index.html
+++ b/index.html
@@ -64,7 +64,29 @@
             <div>
 
                 <div class="column-1-3">
-                    <img src="./img/1.webp" alt="1">
+
+                    <div class="card">
+
+                        <!-- cuore -->
+                        <div class="heart">
+                            &hearts;
+                        </div>
+
+                        <!-- discount tag -->
+                        <div class="discount-tag red-tag">
+                            -50%
+                        </div>
+
+                        <div class="discount-tag green-tag">
+                            Sostenibilità
+                        </div>
+
+                        <!-- imgs nascosta -->
+                        <img class="hover" src="./img/1b.webp" alt="Levi's">
+
+                        <!-- imgs -->
+                        <img src="./img/1.webp" alt="Levi's">
+                    </div>
 
                     <!-- descrizione articolo -->
                     <div class="brand">
@@ -82,7 +104,26 @@
                 </div>
 
                 <div class="column-1-3">
-                    <img src="./img/2.webp" alt="1">
+
+                    <div class="card">
+
+                        <!-- cuore -->
+                        <div class="heart">
+                            &hearts;
+                        </div>
+
+                        <!-- discount tag -->
+                        <div class="discount-tag red-tag">
+                            -30%
+                        </div>
+
+                        <!-- imgs nascosta -->
+                        <img class="hover" src="./img/2b.webp" alt="Guess">
+
+                        <!-- imgs -->
+                        <img src="./img/2.webp" alt="Guess">
+
+                    </div>
 
                     <!-- descrizione articolo -->
                     <div class="brand">
@@ -100,7 +141,26 @@
                 </div>
 
                 <div class="column-1-3">
-                    <img src="./img/3.webp" alt="1">
+
+                    <div class="card">
+
+                        <!-- cuore -->
+                        <div class="heart">
+                            &hearts;
+                        </div>
+
+                        <!-- discount tag -->
+                        <div class="discount-tag red-tag">
+                            -30%
+                        </div>
+
+                        <!-- imgs nascosta -->
+                        <img class="hover" src="./img/3b.webp" alt="Come Zucchero Filato">
+
+                        <!-- imgs -->
+                        <img src="./img/3.webp" alt="Come Zucchero Filato">
+
+                    </div>
 
                     <!-- descrizione articolo -->
                     <div class="brand">
@@ -118,7 +178,30 @@
                 </div>
 
                 <div class="column-1-3">
-                    <img src="./img/4.webp" alt="1">
+
+                    <div class="card">
+
+                        <!-- cuore -->
+                        <div class="heart">
+                            &hearts;
+                        </div>
+
+                        <!-- discount tag -->
+                        <div class="discount-tag red-tag">
+                            -50%
+                        </div>
+
+                        <div class="discount-tag green-tag">
+                            Sostenibilità
+                        </div>
+
+                        <!-- imgs nascosta -->
+                        <img class="hover" src="./img/4b.webp" alt="Levi's">
+
+                        <!-- imgs -->
+                        <img src="./img/4.webp" alt="Levi's">
+
+                    </div>
 
                     <!-- descrizione articolo -->
                     <div class="brand">
@@ -136,7 +219,21 @@
                 </div>
 
                 <div class="column-1-3">
-                    <img src="./img/5.webp" alt="1">
+
+                    <div class="card">
+
+                        <!-- cuore -->
+                        <div class="heart">
+                            &hearts;
+                        </div>
+
+                        <!-- imgs nascosta -->
+                        <img class="hover" src="./img/5b.webp" alt="Maya Deluxe">
+
+                        <!-- imgs -->
+                        <img src="./img/5.webp" alt="Maya Deluxe">
+
+                    </div>
 
                     <!-- descrizione articolo -->
                     <div class="brand">
@@ -154,7 +251,26 @@
                 </div>
 
                 <div class="column-1-3">
-                    <img src="./img/6.webp" alt="1">
+
+                    <div class="card">
+
+                        <!-- cuore -->
+                        <div class="heart">
+                            &hearts;
+                        </div>
+
+                        <!-- discount tag -->
+                        <div class="discount-tag green-tag">
+                            Sostenibilità
+                        </div>
+
+                        <!-- imgs nascosta -->
+                        <img class="hover" src="./img/6b.webp" alt="Esprit">
+
+                        <!-- imgs -->
+                        <img src="./img/6.webp" alt="Esprit">
+
+                    </div>
 
                     <!-- descrizione articolo -->
                     <div class="brand">
