--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
 
             <!-- icone social -->
 
-            <div class="column-1-2 justify-cont-r">
+            <div class="column-1-2">
 
                 <div>
                     Trovaci anche su
