Aggiunto fixed alla sezione header

--- a/index.html
+++ b/index.html
@@ -40,10 +40,12 @@
                     </nav>
                 </div>
 
+                <!-- Logo -->
                 <div class="column-3-5">
                     <img src="./img/boolean-logo.png" alt="Boolean">
                 </div>
 
+                <!-- Link sezione utente -->
                 <div class="column-2-5 justify-cont-r">
                     <i class="fa-solid fa-user"></i>
                     <i class="fa-solid fa-heart"></i>
@@ -67,18 +69,21 @@
 
                     <div class="card">
 
-                        <!-- cuore -->
-                        <div class="heart">
-                            &hearts;
-                        </div>
+                        <div class="tags-container">
+                            <!-- cuore -->
+                            <div class="heart">
+                                &hearts;
+                            </div>
 
-                        <!-- discount tag -->
-                        <div class="discount-tag red-tag">
-                            -50%
-                        </div>
+                            <!-- discount tag -->
+                            <div class="discount-tag red-tag">
+                                -50%
+                            </div>
 
-                        <div class="discount-tag green-tag">
-                            Sostenibilità
+                            <div class="discount-tag green-tag">
+                                Sostenibilità
+                            </div>
+
                         </div>
 
                         <!-- imgs nascosta -->
