--- a/index.html
+++ b/index.html
@@ -42,14 +42,22 @@
 
                 <!-- Logo -->
                 <div class="column-3-5">
-                    <img src="./img/boolean-logo.png" alt="Boolean">
+                    <a href="#">
+                        <img src="./img/boolean-logo.png" alt="Boolean">
+                    </a>
                 </div>
 
                 <!-- Link sezione utente -->
                 <div class="column-2-5 justify-cont-r">
-                    <i class="fa-solid fa-user"></i>
-                    <i class="fa-solid fa-heart"></i>
-                    <i class="fa-solid fa-bag-shopping"></i>
+                    <a href="#">
+                        <i class="fa-solid fa-user"></i>
+                    </a>
+                    <a href="#">
+                        <i class="fa-solid fa-heart"></i>
+                    </a>
+                    <a href="#">
+                        <i class="fa-solid fa-bag-shopping"></i>
+                    </a>
                 </div>
 
             </div>
