fix/discount-container

--- a/index.html
+++ b/index.html
@@ -84,12 +84,14 @@
                             </div>
 
                             <!-- discount tag -->
-                            <div class="discount-tag red-tag">
-                                -50%
-                            </div>
+                            <div class="discount-container">
+                                <span class="discount-tag red-tag">
+                                    -50%
+                                </span>
 
-                            <div class="discount-tag green-tag">
-                                Sostenibilità
+                                <span class="discount-tag green-tag">
+                                    Sostenibilità
+                                </span>
                             </div>
 
                         </div>
@@ -126,8 +128,10 @@
                         </div>
 
                         <!-- discount tag -->
-                        <div class="discount-tag red-tag">
-                            -30%
+                        <div class="discount-container">
+                            <div class="discount-tag red-tag">
+                                -30%
+                            </div>
                         </div>
 
                         <!-- imgs nascosta -->
@@ -163,8 +167,10 @@
                         </div>
 
                         <!-- discount tag -->
-                        <div class="discount-tag red-tag">
-                            -30%
+                        <div class="discount-container">
+                            <div class="discount-tag red-tag">
+                                -30%
+                            </div>
                         </div>
 
                         <!-- imgs nascosta -->
@@ -200,12 +206,14 @@
                         </div>
 
                         <!-- discount tag -->
-                        <div class="discount-tag red-tag">
-                            -50%
-                        </div>
+                        <div class="discount-container">
+                            <div class="discount-tag red-tag">
+                                -50%
+                            </div>
 
-                        <div class="discount-tag green-tag">
-                            Sostenibilità
+                            <div class="discount-tag green-tag">
+                                Sostenibilità
+                            </div>
                         </div>
 
                         <!-- imgs nascosta -->
@@ -273,8 +281,10 @@
                         </div>
 
                         <!-- discount tag -->
-                        <div class="discount-tag green-tag">
-                            Sostenibilità
+                        <div class="discount-container">
+                            <div class="discount-tag green-tag">
+                                Sostenibilità
+                            </div>
                         </div>
 
                         <!-- imgs nascosta -->
