fix/hover immagini, z index heder e tag, heart button

--- a/index.html
+++ b/index.html
@@ -77,27 +77,24 @@
 
                     <div class="card">
 
-                        <div class="tags-container">
-                            <!-- cuore -->
-                            <div class="heart">
-                                &hearts;
-                            </div>
+                        <!-- cuore -->
+                        <button type="button" class="heart">
+                            &hearts;
+                        </button>
 
-                            <!-- discount tag -->
-                            <div class="discount-container">
-                                <span class="discount-tag red-tag">
-                                    -50%
-                                </span>
+                        <!-- discount tag -->
+                        <div class="discount-container">
+                            <span class="discount-tag red-tag">
+                                -50%
+                            </span>
 
-                                <span class="discount-tag green-tag">
-                                    Sostenibilità
-                                </span>
-                            </div>
-
+                            <span class="discount-tag green-tag">
+                                Sostenibilità
+                            </span>
                         </div>
 
                         <!-- imgs nascosta -->
-                        <img class="hover" src="./img/1b.webp" alt="Levi's">
+                        <img class="img-2" src="./img/1b.webp" alt="Levi's">
 
                         <!-- imgs -->
                         <img src="./img/1.webp" alt="Levi's">
@@ -123,9 +120,9 @@
                     <div class="card">
 
                         <!-- cuore -->
-                        <div class="heart">
+                        <button type="button" class="heart">
                             &hearts;
-                        </div>
+                        </button>
 
                         <!-- discount tag -->
                         <div class="discount-container">
@@ -135,7 +132,7 @@
                         </div>
 
                         <!-- imgs nascosta -->
-                        <img class="hover" src="./img/2b.webp" alt="Guess">
+                        <img class="img-2" src="./img/2b.webp" alt="Guess">
 
                         <!-- imgs -->
                         <img src="./img/2.webp" alt="Guess">
@@ -162,9 +159,9 @@
                     <div class="card">
 
                         <!-- cuore -->
-                        <div class="heart">
+                        <button type="button" class="heart">
                             &hearts;
-                        </div>
+                        </button>
 
                         <!-- discount tag -->
                         <div class="discount-container">
@@ -174,7 +171,7 @@
                         </div>
 
                         <!-- imgs nascosta -->
-                        <img class="hover" src="./img/3b.webp" alt="Come Zucchero Filato">
+                        <img class="img-2" src="./img/3b.webp" alt="Come Zucchero Filato">
 
                         <!-- imgs -->
                         <img src="./img/3.webp" alt="Come Zucchero Filato">
@@ -201,9 +198,9 @@
                     <div class="card">
 
                         <!-- cuore -->
-                        <div class="heart">
+                        <button type="button" class="heart">
                             &hearts;
-                        </div>
+                        </button>
 
                         <!-- discount tag -->
                         <div class="discount-container">
@@ -217,7 +214,7 @@
                         </div>
 
                         <!-- imgs nascosta -->
-                        <img class="hover" src="./img/4b.webp" alt="Levi's">
+                        <img class="img-2" src="./img/4b.webp" alt="Levi's">
 
                         <!-- imgs -->
                         <img src="./img/4.webp" alt="Levi's">
@@ -244,12 +241,12 @@
                     <div class="card">
 
                         <!-- cuore -->
-                        <div class="heart">
+                        <button type="button" class="heart">
                             &hearts;
-                        </div>
+                        </button>
 
                         <!-- imgs nascosta -->
-                        <img class="hover" src="./img/5b.webp" alt="Maya Deluxe">
+                        <img class="img-2" src="./img/5b.webp" alt="Maya Deluxe">
 
                         <!-- imgs -->
                         <img src="./img/5.webp" alt="Maya Deluxe">
@@ -276,9 +273,9 @@
                     <div class="card">
 
                         <!-- cuore -->
-                        <div class="heart">
+                        <button type="button" class="heart">
                             &hearts;
-                        </div>
+                        </button>
 
                         <!-- discount tag -->
                         <div class="discount-container">
@@ -288,7 +285,7 @@
                         </div>
 
                         <!-- imgs nascosta -->
-                        <img class="hover" src="./img/6b.webp" alt="Esprit">
+                        <img class="img-2" src="./img/6b.webp" alt="Esprit">
 
                         <!-- imgs -->
                         <img src="./img/6.webp" alt="Esprit">
