--- a/index.html
+++ b/index.html
@@ -352,21 +352,28 @@
                 </div>
 
                 <div>
-                    <i class="fa-brands fa-square-x-twitter"></i>
-                    <i class="fa-brands fa-square-facebook"></i>
-                    <i class="fa-brands fa-square-instagram"></i>
-                    <i class="fa-brands fa-square-pinterest"></i>
-                    <i class="fa-brands fa-square-youtube"></i>
+                    <a href="#">
+                        <i class="fa-brands fa-square-x-twitter"></i>
+                    </a>
+                    <a href="#">
+                        <i class="fa-brands fa-square-facebook"></i>
+                    </a>
+                    <a href="#">
+                        <i class="fa-brands fa-square-instagram"></i>
+                    </a>
+                    <a href="#">
+                        <i class="fa-brands fa-square-pinterest"></i>
+                    </a>
+                    <a href="#">
+                        <i class="fa-brands fa-square-youtube"></i>
+                    </a>
                 </div>
 
             </div>
 
         </section>
 
-        <hr>
-
     </footer>
-
 
 </body>
 
