fix/link immagini

--- a/index.html
+++ b/index.html
@@ -94,10 +94,14 @@
                         </div>
 
                         <!-- imgs nascosta -->
-                        <img class="img-2" src="./img/1b.webp" alt="Levi's">
+                        <a href="#">
+                            <img class="img-2" src="./img/1b.webp" alt="Levi's">
+                        </a>
 
                         <!-- imgs -->
-                        <img src="./img/1.webp" alt="Levi's">
+                        <a href="#">
+                            <img src="./img/1.webp" alt="Levi's">
+                        </a>
                     </div>
 
                     <!-- descrizione articolo -->
@@ -132,10 +136,14 @@
                         </div>
 
                         <!-- imgs nascosta -->
-                        <img class="img-2" src="./img/2b.webp" alt="Guess">
+                        <a href="#">
+                            <img class="img-2" src="./img/2b.webp" alt="Guess">
+                        </a>
 
                         <!-- imgs -->
-                        <img src="./img/2.webp" alt="Guess">
+                        <a href="#">
+                            <img src="./img/2.webp" alt="Guess">
+                        </a>
 
                     </div>
 
@@ -171,10 +179,14 @@
                         </div>
 
                         <!-- imgs nascosta -->
-                        <img class="img-2" src="./img/3b.webp" alt="Come Zucchero Filato">
+                        <a href="#">
+                            <img class="img-2" src="./img/3b.webp" alt="Come Zucchero Filato">
+                        </a>
 
                         <!-- imgs -->
-                        <img src="./img/3.webp" alt="Come Zucchero Filato">
+                        <a href="#">
+                            <img src="./img/3.webp" alt="Come Zucchero Filato">
+                        </a>
 
                     </div>
 
@@ -214,10 +226,14 @@
                         </div>
 
                         <!-- imgs nascosta -->
-                        <img class="img-2" src="./img/4b.webp" alt="Levi's">
+                        <a href="#">
+                            <img class="img-2" src="./img/4b.webp" alt="Levi's">
+                        </a>
 
                         <!-- imgs -->
-                        <img src="./img/4.webp" alt="Levi's">
+                        <a href="#">
+                            <img src="./img/4.webp" alt="Levi's">
+                        </a>
 
                     </div>
 
@@ -246,10 +262,14 @@
                         </button>
 
                         <!-- imgs nascosta -->
-                        <img class="img-2" src="./img/5b.webp" alt="Maya Deluxe">
+                        <a href="#">
+                            <img class="img-2" src="./img/5b.webp" alt="Maya Deluxe">
+                        </a>
 
                         <!-- imgs -->
-                        <img src="./img/5.webp" alt="Maya Deluxe">
+                        <a href="#">
+                            <img src="./img/5.webp" alt="Maya Deluxe">
+                        </a>
 
                     </div>
 
@@ -285,10 +305,14 @@
                         </div>
 
                         <!-- imgs nascosta -->
-                        <img class="img-2" src="./img/6b.webp" alt="Esprit">
+                        <a href="#">
+                            <img class="img-2" src="./img/6b.webp" alt="Esprit">
+                        </a>
 
                         <!-- imgs -->
-                        <img src="./img/6.webp" alt="Esprit">
+                        <a href="#">
+                            <img src="./img/6.webp" alt="Esprit">
+                        </a>
 
                     </div>
 
